[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://Scripts/SlotMachine.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://Assets/SingleImages/output/lever_spritesheet2_pixel.png" id="lever_spritesheet"]
[ext_resource type="AudioStream" path="res://Audio/SFX/reel_spin.mp3" id="audio_reel_spin"]
[ext_resource type="AudioStream" path="res://Audio/SFX/reel_stop.mp3" id="audio_reel_stop"]
[ext_resource type="AudioStream" path="res://Audio/SFX/slot_win.mp3" id="audio_slot_win"]
[ext_resource type="AudioStream" path="res://Audio/SFX/spin_start.mp3" id="audio_spin_start"]
[ext_resource type="Texture2D" path="res://Assets/SingleImages/output/casino_marker_bg.png" id="marker_bg"]

[node name="Main" type="Node2D"]

[node name="SceneBackground" type="ColorRect" parent="."]
offset_left = 0.0
offset_top = 0.0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.94, 0.92, 0.84, 1)

[node name="SlotMachine" type="Node2D" parent="."]
position = Vector2(960, 540)
script = ExtResource("1_script")

[node name="ReelBackground" type="ColorRect" parent="SlotMachine"]
offset_left = -350.0
offset_top = -180.0
offset_right = 350.0
offset_bottom = 180.0
color = Color(0.15, 0.15, 0.15, 1)

[node name="ReelContainer" type="HBoxContainer" parent="SlotMachine"]
offset_left = -320.0
offset_top = -150.0
offset_right = 320.0
offset_bottom = 150.0
theme_override_constants/separation = 30

[node name="SpinButton" type="Button" parent="SlotMachine"]
visible = false
offset_left = -75.0
offset_top = 180.0
offset_right = 75.0
offset_bottom = 220.0
text = "SPIN"

[node name="Lever" type="Control" parent="SlotMachine"]
offset_left = 365.0
offset_top = -120.0
offset_right = 425.0
offset_bottom = 80.0

[node name="LeverButton" type="Button" parent="SlotMachine/Lever"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeverSprite" type="Sprite2D" parent="SlotMachine/Lever"]
position = Vector2(30, 100)
scale = Vector2(1.5, 1.5)
texture = ExtResource("lever_spritesheet")
hframes = 4
frame = 0

[node name="CreditsLabel" type="Label" parent="SlotMachine"]
visible = false
offset_left = -100.0
offset_top = -180.0
offset_right = 100.0
offset_bottom = -150.0
text = "Credits: 100"
horizontal_alignment = 1

[node name="SFX" type="Node" parent="SlotMachine"]

[node name="SpinStart" type="AudioStreamPlayer" parent="SlotMachine/SFX"]
stream = ExtResource("audio_spin_start")

[node name="ReelSpin" type="AudioStreamPlayer" parent="SlotMachine/SFX"]
stream = ExtResource("audio_reel_spin")

[node name="ReelStop" type="AudioStreamPlayer" parent="SlotMachine/SFX"]
stream = ExtResource("audio_reel_stop")

[node name="SlotWin" type="AudioStreamPlayer" parent="SlotMachine/SFX"]
stream = ExtResource("audio_slot_win")

[node name="HUD" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Marker" type="Control" parent="HUD"]
offset_left = 0.0
offset_top = 0.0
offset_right = 520.0
offset_bottom = 320.0

[node name="Background" type="TextureRect" parent="HUD/Marker"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("marker_bg")
expand_mode = 1
stretch_mode = 4

[node name="AmountLabel" type="Label" parent="HUD/Marker"]
layout_mode = 1
offset_left = 40.0
offset_top = 165.0
offset_right = 480.0
offset_bottom = 215.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "$10,000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DueLabel" type="Label" parent="HUD/Marker"]
layout_mode = 1
offset_left = -10.0
offset_top = 209.0
offset_right = 430.0
offset_bottom = 250.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "24"
horizontal_alignment = 1
vertical_alignment = 1
